finished repeating from lecture 01 to lecture 03

--- a/ML_lecture_by_sungkim/lab01 - lab03.ipynb
+++ b/ML_lecture_by_sungkim/lab01 - lab03.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### linear_regression의 hypothesis 와 cost 설명"
+    "### lac 01 - linear_regression의 hypothesis 와 cost 설명"
    ]
   },
   {
@@ -33,13 +33,13 @@
     "#### cost(loss) function\n",
     "$$ H(x) - y $$\n",
     "\n",
-    "세운 가설과 실제 데이터 값($y$)의 차이를 구하는 것을 바로 cost function 이라  함.\n",
+    "세운 가설과 실제 데이터 값($y$)의 차이를 구하는 것을 바로 cost function 이라  함.  \n",
     "\n",
-    "linear regression 의 경우, cost function은 차이의 제곱을 취해준 후, 개수만큼 나누어 평균을 구해줌 -> 차이만을 고려할 경우 0이 되므로\n",
+    "linear regression 의 경우, cost function은 차이의 제곱을 취해준 후, 개수만큼 나누어 평균을 구해줌 -> 차이만을 고려할 경우 0이 되므로  \n",
     "\n",
     "$$ cost(W, b) = \\frac{1}{m}\\sum_{ i = 1}^m(H(x^{(i)}) - y^{(i)})^2$$\n",
     "\n",
-    "cost function 을 가장 작게 하는 W, b를 구하는 것이 cost function 의 목적\n",
+    "cost function 을 가장 작게 하는 W, b를 구하는 것이 cost function 의 목적  \n",
     "'학습'을 한다는 것은 가장 작은 W, b를 구하게 하는 것"
    ]
   },
@@ -51,11 +51,541 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![2-1.png](img/2-1.png)\n",
+    "- 텐서플로 작동의 흐름\n",
+    "1. 그래프를 그림\n",
+    "2. sess.run(op)를 통해 그래프를 실현\n",
+    "3. 결과값을 리턴"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### tensorflow에 대한 설명\n",
+    "- 구글에서 제작\n",
+    "- 머신러닝을 위한 알고리즘은 상당히 많은데 왜 하필 텐서플로우인가?\n",
+    "> 텐서플로우가 대다수의 분야에서 1등을 차지  \n",
+    "> 많은 사람들이 사용하여 도움을 받거나 오픈 소스를 쉽게 얻을 수 있음.  \n",
+    "> 가장 좋은 선택이라 생각\n",
+    "- tensorflow는 numerical computation을 가능하게 하는 data flow graph\n",
+    "- data flow graph란?\n",
+    "> 노드(node)는 하나의 오퍼레이션, 하나의 더하기 혹은 빼기  \n",
+    "> 에지(edge)는 다차원의 텐서를 뜻함. 텐서들이 노드에 들어와 오퍼레이션(operation)이 일어남  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b'Hello, Tensorflow'\n"
+     ]
+    }
+   ],
+   "source": [
+    "#하나의 node를 만들어 진 것\n",
+    "hello = tf.constant(\"Hello, Tensorflow\")\n",
+    "\n",
+    "#start a tf session\n",
+    "sess = tf.Session()\n",
+    "\n",
+    "# run the op and result\n",
+    "print(sess.run(hello))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### (1) 그래프를 만듬"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "node1 = tf.constant(3.0, tf.float32)\n",
+    "node2 = tf.constant(4.0)\n",
+    "node3 = tf.add(node1, node2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### (2) sess.run(op)를 통해 원하는 노드의 결과값을 얻어냄"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "node1 :  Tensor(\"Const_1:0\", shape=(), dtype=float32) node2 :  Tensor(\"Const_2:0\", shape=(), dtype=float32)\n",
+      "node3 :  Tensor(\"Add:0\", shape=(), dtype=float32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#그래프의 하나의 요소로 써, 텐서라는 것만 표현\n",
+    "print(\"node1 : \", node1, \"node2 : \", node2)\n",
+    "print(\"node3 : \", node3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sess.run(node1, node2) :  [3.0, 4.0]\n",
+      "sess.run(node3) :  7.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "sess = tf.Session()\n",
+    "print(\"sess.run(node1, node2) : \", sess.run([node1, node2]))\n",
+    "print(\"sess.run(node3) : \", sess.run(node3))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### placeholder"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "그래프를 만들어 놓고 실행시키는 단계에서 값들을 던져 주고 싶다면?  \n",
+    "** placeholder** 라는 특별한 노드를 만들어줌"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7.5\n",
+      "[ 3.  7.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#노드를 constant를 통해 미리 만들어 주지 않고 placeholder라는 특별한 노드를 만들어\n",
+    "#값들을 실행시킬 때 바로 던져 줄 수 있게 해줌\n",
+    "a = tf.placeholder(tf.float32)\n",
+    "b = tf.placeholder(tf.float32)\n",
+    "adder_node = a + b\n",
+    "\n",
+    "print(sess.run(adder_node, feed_dict = {a : 3, b : 4.5}))\n",
+    "#n개 이상의 값을 넣어 줄 수 있음\n",
+    "print(sess.run(adder_node, feed_dict = {a : [1,3], b : [2,4]}))"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![2-1.png](img/2-1.png)"
+    "#### 1. Build graph using TF operations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$ H(x) = Wx + b $$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#hypothesis를 텐서플러로 구현하는 과정\n",
+    "x_train = [1, 2, 3]\n",
+    "y_train = [1, 2, 3]\n",
+    "\n",
+    "W = tf.Variable(tf.random_normal([1]), name = 'weight')\n",
+    "b = tf.Variable(tf.random_normal([1]), name = 'bias')\n",
+    "\n",
+    "hypothesis = x_train * W + b"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$ cost(W, b) = \\frac{1}{m}\\sum_{ i = 1}^m(H(x^{(i)}) - y^{(i)})^2$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# 코스트 함수를 텐서플러로 구현하는 과정\n",
+    "cost = tf.reduce_mean(tf.square(hypothesis - y_train))# reudce_mean의 경우, 평균을 내주는 것\n",
+    "\n",
+    "#gradientdescent\n",
+    "optimizer = tf.train.GradientDescentOptimizer(learning_rate = 0.01)\n",
+    "train = optimizer.minimize(cost)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2. run/update graph and get results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "sess = tf.Session()\n",
+    "sess.run(tf.global_variables_initializer())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 12.4835 [-0.58267403] [-0.12305211]\n",
+      "20 0.142932 [ 0.66808599] [ 0.40022257]\n",
+      "40 0.0283138 [ 0.79569882] [ 0.43068877]\n",
+      "60 0.0247948 [ 0.81596613] [ 0.41513991]\n",
+      "80 0.0225107 [ 0.82563066] [ 0.39607662]\n",
+      "100 0.0204445 [ 0.83392209] [ 0.37750497]\n",
+      "120 0.018568 [ 0.84173644] [ 0.35976765]\n",
+      "140 0.0168637 [ 0.84917516] [ 0.34286025]\n",
+      "160 0.0153159 [ 0.85626334] [ 0.32674715]\n",
+      "180 0.0139102 [ 0.86301845] [ 0.3113912]\n",
+      "200 0.0126334 [ 0.86945611] [ 0.29675698]\n",
+      "220 0.0114739 [ 0.87559122] [ 0.28281048]\n",
+      "240 0.0104208 [ 0.88143796] [ 0.26951942]\n",
+      "260 0.0094643 [ 0.88700992] [ 0.25685298]\n",
+      "280 0.00859563 [ 0.89231998] [ 0.24478187]\n",
+      "300 0.0078067 [ 0.89738065] [ 0.23327807]\n",
+      "320 0.00709015 [ 0.90220338] [ 0.2223148]\n",
+      "340 0.00643939 [ 0.90679938] [ 0.21186683]\n",
+      "360 0.00584837 [ 0.91117948] [ 0.20190988]\n",
+      "380 0.00531157 [ 0.91535378] [ 0.19242086]\n",
+      "400 0.00482406 [ 0.91933191] [ 0.18337776]\n",
+      "420 0.00438129 [ 0.92312294] [ 0.17475966]\n",
+      "440 0.00397916 [ 0.92673582] [ 0.16654661]\n",
+      "460 0.00361393 [ 0.93017906] [ 0.15871952]\n",
+      "480 0.00328222 [ 0.93346035] [ 0.15126026]\n",
+      "500 0.00298097 [ 0.93658745] [ 0.1441516]\n",
+      "520 0.00270737 [ 0.93956769] [ 0.13737701]\n",
+      "540 0.00245887 [ 0.94240773] [ 0.13092075]\n",
+      "560 0.00223319 [ 0.94511437] [ 0.12476797]\n",
+      "580 0.00202822 [ 0.94769382] [ 0.1189043]\n",
+      "600 0.00184205 [ 0.95015204] [ 0.11331624]\n",
+      "620 0.00167299 [ 0.95249468] [ 0.10799078]\n",
+      "640 0.00151943 [ 0.95472723] [ 0.10291562]\n",
+      "660 0.00137997 [ 0.95685488] [ 0.09807895]\n",
+      "680 0.00125331 [ 0.95888245] [ 0.09346963]\n",
+      "700 0.00113828 [ 0.96081495] [ 0.08907691]\n",
+      "720 0.00103381 [ 0.96265644] [ 0.08489063]\n",
+      "740 0.000938916 [ 0.9644115] [ 0.08090108]\n",
+      "760 0.000852739 [ 0.966084] [ 0.07709902]\n",
+      "780 0.000774474 [ 0.96767795] [ 0.07347564]\n",
+      "800 0.000703387 [ 0.96919686] [ 0.07002258]\n",
+      "820 0.000638829 [ 0.97064459] [ 0.06673177]\n",
+      "840 0.000580196 [ 0.9720242] [ 0.06359562]\n",
+      "860 0.000526942 [ 0.97333896] [ 0.06060685]\n",
+      "880 0.000478576 [ 0.97459191] [ 0.05775855]\n",
+      "900 0.00043465 [ 0.97578603] [ 0.0550441]\n",
+      "920 0.000394756 [ 0.97692394] [ 0.05245722]\n",
+      "940 0.000358525 [ 0.97800839] [ 0.04999195]\n",
+      "960 0.000325619 [ 0.97904187] [ 0.04764255]\n",
+      "980 0.000295731 [ 0.98002684] [ 0.04540362]\n",
+      "1000 0.000268589 [ 0.98096555] [ 0.04326981]\n",
+      "1020 0.000243938 [ 0.9818601] [ 0.04123627]\n",
+      "1040 0.000221546 [ 0.98271269] [ 0.03929829]\n",
+      "1060 0.000201212 [ 0.9835251] [ 0.03745141]\n",
+      "1080 0.000182745 [ 0.9842993] [ 0.03569133]\n",
+      "1100 0.000165973 [ 0.98503721] [ 0.03401397]\n",
+      "1120 0.000150738 [ 0.98574042] [ 0.03241543]\n",
+      "1140 0.000136903 [ 0.9864105] [ 0.03089203]\n",
+      "1160 0.000124336 [ 0.98704922] [ 0.02944021]\n",
+      "1180 0.000112924 [ 0.98765785] [ 0.02805661]\n",
+      "1200 0.00010256 [ 0.98823786] [ 0.02673805]\n",
+      "1220 9.31476e-05 [ 0.98879057] [ 0.0254815]\n",
+      "1240 8.45985e-05 [ 0.98931736] [ 0.024284]\n",
+      "1260 7.68332e-05 [ 0.98981947] [ 0.02314273]\n",
+      "1280 6.97801e-05 [ 0.99029803] [ 0.02205504]\n",
+      "1300 6.33747e-05 [ 0.99075395] [ 0.02101851]\n",
+      "1320 5.75586e-05 [ 0.99118847] [ 0.0200307]\n",
+      "1340 5.22761e-05 [ 0.9916026] [ 0.01908934]\n",
+      "1360 4.74773e-05 [ 0.99199724] [ 0.01819219]\n",
+      "1380 4.312e-05 [ 0.99237335] [ 0.01733721]\n",
+      "1400 3.91629e-05 [ 0.99273175] [ 0.01652242]\n",
+      "1420 3.55679e-05 [ 0.99307334] [ 0.01574592]\n",
+      "1440 3.23035e-05 [ 0.99339885] [ 0.01500593]\n",
+      "1460 2.9338e-05 [ 0.99370909] [ 0.01430071]\n",
+      "1480 2.66452e-05 [ 0.99400473] [ 0.01362863]\n",
+      "1500 2.42003e-05 [ 0.99428648] [ 0.01298814]\n",
+      "1520 2.19787e-05 [ 0.994555] [ 0.01237776]\n",
+      "1540 1.99619e-05 [ 0.99481082] [ 0.01179607]\n",
+      "1560 1.81299e-05 [ 0.99505472] [ 0.01124176]\n",
+      "1580 1.64658e-05 [ 0.99528712] [ 0.01071342]\n",
+      "1600 1.49544e-05 [ 0.99550861] [ 0.01020995]\n",
+      "1620 1.35817e-05 [ 0.99571967] [ 0.00973013]\n",
+      "1640 1.23355e-05 [ 0.99592084] [ 0.00927287]\n",
+      "1660 1.12032e-05 [ 0.99611259] [ 0.00883707]\n",
+      "1680 1.01747e-05 [ 0.99629527] [ 0.00842174]\n",
+      "1700 9.24129e-06 [ 0.99646938] [ 0.00802595]\n",
+      "1720 8.39278e-06 [ 0.99663526] [ 0.00764877]\n",
+      "1740 7.62242e-06 [ 0.99679345] [ 0.00728931]\n",
+      "1760 6.92276e-06 [ 0.99694413] [ 0.00694671]\n",
+      "1780 6.28733e-06 [ 0.99708778] [ 0.00662025]\n",
+      "1800 5.71045e-06 [ 0.99722457] [ 0.00630913]\n",
+      "1820 5.18598e-06 [ 0.99735504] [ 0.00601262]\n",
+      "1840 4.71021e-06 [ 0.99747932] [ 0.00573005]\n",
+      "1860 4.27796e-06 [ 0.99759775] [ 0.00546079]\n",
+      "1880 3.8853e-06 [ 0.9977107] [ 0.00520417]\n",
+      "1900 3.52843e-06 [ 0.99781829] [ 0.00495957]\n",
+      "1920 3.20492e-06 [ 0.99792075] [ 0.00472651]\n",
+      "1940 2.91052e-06 [ 0.9980185] [ 0.00450438]\n",
+      "1960 2.64344e-06 [ 0.99811167] [ 0.00429268]\n",
+      "1980 2.40074e-06 [ 0.99820042] [ 0.00409092]\n",
+      "2000 2.18052e-06 [ 0.99828494] [ 0.00389868]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for step in range(2001) : \n",
+    "    sess.run(train)\n",
+    "    if step % 20 == 0 :\n",
+    "        print(step, sess.run(cost), sess.run(W), sess.run(b))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### placeholder를 사용하게 된다면?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 2.18052e-06 [ 0.99828905] [ 0.00388931]\n",
+      "20 1.98033e-06 [ 0.99836946] [ 0.00370653]\n",
+      "40 1.79868e-06 [ 0.99844611] [ 0.00353235]\n",
+      "60 1.63357e-06 [ 0.99851912] [ 0.00336635]\n",
+      "80 1.48359e-06 [ 0.99858874] [ 0.00320814]\n",
+      "100 1.34755e-06 [ 0.99865508] [ 0.00305738]\n",
+      "120 1.22384e-06 [ 0.99871826] [ 0.00291368]\n",
+      "140 1.11138e-06 [ 0.99877846] [ 0.00277675]\n",
+      "160 1.00951e-06 [ 0.9988358] [ 0.00264628]\n",
+      "180 9.16842e-07 [ 0.99889052] [ 0.00252196]\n",
+      "200 8.32625e-07 [ 0.99894267] [ 0.00240347]\n",
+      "220 7.56402e-07 [ 0.99899238] [ 0.00229054]\n",
+      "240 6.86852e-07 [ 0.99903971] [ 0.0021829]\n",
+      "260 6.23821e-07 [ 0.99908483] [ 0.00208032]\n",
+      "280 5.66561e-07 [ 0.99912786] [ 0.00198255]\n",
+      "300 5.14654e-07 [ 0.99916887] [ 0.0018894]\n",
+      "320 4.6735e-07 [ 0.99920779] [ 0.00180064]\n",
+      "340 4.24412e-07 [ 0.99924511] [ 0.00171605]\n",
+      "360 3.85635e-07 [ 0.99928045] [ 0.00163545]\n",
+      "380 3.50184e-07 [ 0.99931431] [ 0.00155864]\n",
+      "400 3.18096e-07 [ 0.99934655] [ 0.00148541]\n",
+      "420 2.88929e-07 [ 0.99937719] [ 0.00141563]\n",
+      "440 2.62392e-07 [ 0.9994064] [ 0.00134914]\n",
+      "460 2.38361e-07 [ 0.99943429] [ 0.00128579]\n",
+      "480 2.16482e-07 [ 0.99946088] [ 0.00122541]\n",
+      "500 1.96652e-07 [ 0.99948621] [ 0.00116786]\n",
+      "520 1.78562e-07 [ 0.99951035] [ 0.001113]\n",
+      "540 1.62194e-07 [ 0.9995333] [ 0.00106073]\n",
+      "560 1.47354e-07 [ 0.99955517] [ 0.00101093]\n",
+      "580 1.33808e-07 [ 0.99957609] [ 0.00096346]\n",
+      "600 1.21546e-07 [ 0.99959606] [ 0.0009182]\n",
+      "620 1.10408e-07 [ 0.99961507] [ 0.00087509]\n",
+      "640 1.00262e-07 [ 0.99963301] [ 0.00083403]\n",
+      "660 9.10545e-08 [ 0.99965018] [ 0.00079488]\n",
+      "680 8.27199e-08 [ 0.99966675] [ 0.00075758]\n",
+      "700 7.51713e-08 [ 0.99968225] [ 0.00072206]\n",
+      "720 6.82905e-08 [ 0.99969715] [ 0.00068816]\n",
+      "740 6.20155e-08 [ 0.99971145] [ 0.00065592]\n",
+      "760 5.63413e-08 [ 0.99972486] [ 0.00062513]\n",
+      "780 5.11783e-08 [ 0.99973792] [ 0.00059582]\n",
+      "800 4.64838e-08 [ 0.99975008] [ 0.00056784]\n",
+      "820 4.22149e-08 [ 0.999762] [ 0.00054121]\n",
+      "840 3.83583e-08 [ 0.99977297] [ 0.0005158]\n",
+      "860 3.48304e-08 [ 0.99978369] [ 0.00049165]\n",
+      "880 3.16278e-08 [ 0.99979383] [ 0.00046854]\n",
+      "900 2.87473e-08 [ 0.99980336] [ 0.00044664]\n",
+      "920 2.61045e-08 [ 0.99981278] [ 0.00042568]\n",
+      "940 2.37207e-08 [ 0.99982136] [ 0.0004057]\n",
+      "960 2.15716e-08 [ 0.99982977] [ 0.00038675]\n",
+      "980 1.95623e-08 [ 0.99983788] [ 0.00036857]\n",
+      "1000 1.77873e-08 [ 0.99984533] [ 0.00035128]\n",
+      "1020 1.61886e-08 [ 0.99985248] [ 0.00033493]\n",
+      "1040 1.46995e-08 [ 0.99985963] [ 0.00031925]\n",
+      "1060 1.33463e-08 [ 0.99986613] [ 0.00030422]\n",
+      "1080 1.2136e-08 [ 0.99987227] [ 0.00029001]\n",
+      "1100 1.102e-08 [ 0.99987823] [ 0.00027651]\n",
+      "1120 1.00083e-08 [ 0.99988419] [ 0.00026354]\n",
+      "1140 9.09959e-09 [ 0.99988949] [ 0.00025112]\n",
+      "1160 8.26778e-09 [ 0.99989462] [ 0.00023937]\n",
+      "1180 7.50919e-09 [ 0.99989939] [ 0.00022825]\n",
+      "1200 6.82995e-09 [ 0.99990416] [ 0.00021766]\n",
+      "1220 6.19756e-09 [ 0.99990886] [ 0.00020742]\n",
+      "1240 5.62589e-09 [ 0.9999131] [ 0.00019763]\n",
+      "1260 5.10835e-09 [ 0.99991703] [ 0.00018837]\n",
+      "1280 4.65463e-09 [ 0.99992085] [ 0.00017961]\n",
+      "1300 4.23522e-09 [ 0.99992442] [ 0.00017132]\n",
+      "1320 3.85408e-09 [ 0.999928] [ 0.00016341]\n",
+      "1340 3.49007e-09 [ 0.99993157] [ 0.00015575]\n",
+      "1360 3.16675e-09 [ 0.99993479] [ 0.00014835]\n",
+      "1380 2.88064e-09 [ 0.99993783] [ 0.00014135]\n",
+      "1400 2.61673e-09 [ 0.99994069] [ 0.00013473]\n",
+      "1420 2.37939e-09 [ 0.99994338] [ 0.00012846]\n",
+      "1440 2.17055e-09 [ 0.99994594] [ 0.00012254]\n",
+      "1460 1.97435e-09 [ 0.99994832] [ 0.00011694]\n",
+      "1480 1.80152e-09 [ 0.99995071] [ 0.00011162]\n",
+      "1500 1.63511e-09 [ 0.99995309] [ 0.00010649]\n",
+      "1520 1.48341e-09 [ 0.99995548] [ 0.00010147]\n",
+      "1540 1.34279e-09 [ 0.99995762] [  9.65891086e-05]\n",
+      "1560 1.21611e-09 [ 0.99995959] [  9.19637823e-05]\n",
+      "1580 1.10572e-09 [ 0.9999615] [  8.76015110e-05]\n",
+      "1600 1.00699e-09 [ 0.99996328] [  8.34728926e-05]\n",
+      "1620 9.13384e-10 [ 0.99996495] [  7.95628148e-05]\n",
+      "1640 8.32098e-10 [ 0.99996656] [  7.58649549e-05]\n",
+      "1660 7.57855e-10 [ 0.99996805] [  7.23665580e-05]\n",
+      "1680 6.90174e-10 [ 0.99996948] [  6.90604938e-05]\n",
+      "1700 6.28598e-10 [ 0.99997085] [  6.59411890e-05]\n",
+      "1720 5.72702e-10 [ 0.99997211] [  6.29673086e-05]\n",
+      "1740 5.23168e-10 [ 0.99997336] [  6.01611064e-05]\n",
+      "1760 4.75879e-10 [ 0.99997455] [  5.74693622e-05]\n",
+      "1780 4.33265e-10 [ 0.99997574] [  5.48864991e-05]\n",
+      "1800 3.94986e-10 [ 0.99997693] [  5.23711788e-05]\n",
+      "1820 3.59175e-10 [ 0.99997813] [  4.98948029e-05]\n",
+      "1840 3.24727e-10 [ 0.99997926] [  4.74414810e-05]\n",
+      "1860 2.91588e-10 [ 0.99998033] [  4.50914667e-05]\n",
+      "1880 2.64649e-10 [ 0.99998128] [  4.28551029e-05]\n",
+      "1900 2.40055e-10 [ 0.99998218] [  4.07427069e-05]\n",
+      "1920 2.15498e-10 [ 0.99998307] [  3.87399923e-05]\n",
+      "1940 1.93912e-10 [ 0.99998391] [  3.68461515e-05]\n",
+      "1960 1.78526e-10 [ 0.99998468] [  3.50564260e-05]\n",
+      "1980 1.60412e-10 [ 0.9999854] [  3.33620628e-05]\n",
+      "2000 1.45481e-10 [ 0.99998605] [  3.17622726e-05]\n"
+     ]
+    }
+   ],
+   "source": [
+    "X = tf.placeholder(tf.float32)\n",
+    "Y = tf.placeholder(tf.float32)\n",
+    "\n",
+    "for step in range(2001) : \n",
+    "    cost_val, W_val, b_val, _ = \\\n",
+    "    sess.run([cost, W, b, train],\n",
+    "           feed_dict = {X : [1, 2, 3], Y : [1, 2, 3]})\n",
+    "    if step % 20 == 0 :\n",
+    "        print(step, cost_val, W_val, b_val)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "placeholder를 쓰는 가장 큰 이유는 ** 만들어진 모델에 대해 값을 넘겨줄 수 있다는 것 **"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### lec 03 - Linear regression의 cost 최소화 알고리즘의 원리 설명"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![image.png](img/2-2.png)\n",
+    "- 우리가 가진 데이터로 포물선의 가장 작은 값을 찾는 것이 목표\n",
+    "- Gradient descent algorithm : 경사를 따라 내려가는 알고리즘\n",
+    "> 많은 cost function의 minimazation에 사용됨.\n",
+    "> 많은 w들이 있는 함수에서도 사용됨\n",
+    "- 아무 점에서 시작해도 가능 "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![image.png](img/2-3.png)\n",
+    "- 위 수식을 기계적으로 적용만 시키면 되는 것.(미분 과정 생략)\n",
+    "- 만들어놓은 cost function이 convex function인지 반드시 확인할 것!"
    ]
   }
  ],
