remind of ML from lec 05 - 06

--- a/ML_lecture_by_sungkim/lec5-lec6.ipynb
+++ b/ML_lecture_by_sungkim/lec5-lec6.ipynb
@@ -40,7 +40,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -86,7 +85,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -98,7 +96,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -108,7 +105,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -119,7 +115,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -129,7 +124,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -143,7 +137,154 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "https://www.youtube.com/watch?v=VRnubDzIy3A (여기서부터 들을 것)"
+    "#### lab 06-1 : TensorFlow로 softmax classification 구현하기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "x_data = [[1, 2, 1, 1], [2,1, 3, 2], [3,1,3,4], [4,1,5,5], [1,7,5,5,],[1,2,5,6], [1,6,6,6], [1,7,7,7]]\n",
+    "y_data = [[0,0,1], [0,0,1], [0,0,1], [0,1,0], [0,1,0], [0,1,0], [1,0,0], [1,0,0]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X  =tf.placeholder(\"float\", [None, 4])\n",
+    "Y = tf.placeholder(\"float\", [None, 3])\n",
+    "nb_classes = 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "W = tf.Variable(tf.random_normal([4, nb_classes]), name = 'weight')\n",
+    "b = tf.Variable(tf.random_normal([nb_classes]), name = 'bias')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "hypothesis = tf.nn.softmax(tf.matmul(X, W) + b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "cost = tf.reduce_mean(-tf.reduce_sum(Y * tf.log(hypothesis), axis = 1))\n",
+    "optimizer = tf.train.GradientDescentOptimizer(learning_rate = 0.1).minimize(cost)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with tf.Session() as sess :\n",
+    "    sess.run(tf.global_variables_initializer())\n",
+    "    \n",
+    "    for step in range(3001) :\n",
+    "        sess.run(optimizer, feed_dict = {X: x_data, Y:y_data})\n",
+    "        if step % 200 == 0 :\n",
+    "            print(step, sess.run(cost, feed_dict = {X: x_data, Y: y_data}))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = sess.run(hypothesis, feed_dict = {X : [[1, 11, 7, 9]]})\n",
+    "print(a, sess.run(tf.arg_max(a, 1)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### lab 06 -2 : TensorFlow Fancy Softmax classification 구현하기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#logistic classifier 통과 후\n",
+    "logits = tf.matmul(X, W) + b\n",
+    "#softmax function 을 통해 one-hot-encoding \n",
+    "hypothesis = tf.nn.softmax(logits)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "cost = tf.reduce_mean(-tf.reduce_sum(Y * tf.log(hypothesis), axis = 1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cost_i = tf.nn.softmax_cross_entropy_with_logits_v2(logits = logits, labels = Y_one_hot)\n",
+    "cost = tf.reduce_mean(cost_i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "Y = tf.placeholder(tf.int32, [None, 1]) # 0 ~ 6, shape = (? , 1)\n",
+    "Y_one_hot = tf.one_hot(Y, nb_classes) # one hot shape = (?, 1, 7)\n",
+    "#위의  one_hot 만 했을 경우, 창원의 수가 추가 되어 (?, 1, 7)의 형태가 나옴\n",
+    "#우리가 원하는 형태가 아니므로, tf.reshape로 다시 one_hot 형태를 (?, 7)로 변겅\n",
+    "Y_one_hot = tf.reshape(Y_one_hot, [-1, nb_classes]) #shape = (?, 7)"
    ]
   }
  ],
