add lecture 07 to original file

--- a/ML_lecture_by_sungkim/lec5-lec7.ipynb
+++ b/ML_lecture_by_sungkim/lec5-lec7.ipynb
@@ -166,7 +166,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "X  =tf.placeholder(\"float\", [None, 4])\n",
@@ -177,7 +179,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "W = tf.Variable(tf.random_normal([4, nb_classes]), name = 'weight')\n",
@@ -210,7 +214,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "with tf.Session() as sess :\n",
@@ -225,7 +231,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "a = sess.run(hypothesis, feed_dict = {X : [[1, 11, 7, 9]]})\n",
@@ -242,7 +250,9 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#logistic classifier 통과 후\n",
@@ -265,7 +275,9 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "cost_i = tf.nn.softmax_cross_entropy_with_logits_v2(logits = logits, labels = Y_one_hot)\n",
@@ -285,6 +297,51 @@
     "#위의  one_hot 만 했을 경우, 창원의 수가 추가 되어 (?, 1, 7)의 형태가 나옴\n",
     "#우리가 원하는 형태가 아니므로, tf.reshape로 다시 one_hot 형태를 (?, 7)로 변겅\n",
     "Y_one_hot = tf.reshape(Y_one_hot, [-1, nb_classes]) #shape = (?, 7)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### lec 07 - 1 : 학습 rate, overfitting, regularization\n",
+    "\n",
+    "- 경사를 따라 내려가는 step 클 경우 - ** overshooting **\n",
+    "- 경사를 따라 내려가는 step이 작은 경우 - **small learning rate **\n",
+    "> global minimum에 도달하지 못하고 local minimum에서 멈춰버림\n",
+    "\n",
+    "learning rate를 정하는 것에 답은 없음. 데이터에 따라 다름  \n",
+    "시작은 0.01로 하는 것 권장\n",
+    "\n",
+    "데이터를 전처리해야 하는 경우 \n",
+    "![image.png](img/7-1.png)\n",
+    "- 데이터값의 큰 차이가 있어, 등고선이 원이 아닌 타원의 형태를 띄게 됨\n",
+    "- learning rate를 하던 도중, 바깥으로 틩겨져 나가 버릴 수 있음.\n",
+    "- learning rate에 문제가 없는 것 같으나, cost가 발산하는 것 같다면 데이터 중 값이 크게 차이가 나는 것이 있는지 확인할 것!\n",
+    "\n",
+    "#### standardization\n",
+    "- 값에서 평균을 빼고, 표준편차로 나눠준 값\n",
+    "\n",
+    "#### overfitting\n",
+    "- training data에 너무 잘 맞는 형태로 모델이 만들어지는 것. -> 실제 상황에서 잘 안 맞을수도\n",
+    "\n",
+    "over fitting 을 줄이기 위해선?\n",
+    "- more training data!\n",
+    "- reduce number of features\n",
+    "- regularization\n",
+    "\n",
+    "regularization이란?  \n",
+    "- Let's not have too big numbers in the weight\n",
+    "- lidge, lasso, elastic 등 배운 내용\n",
+    "- tensorflow code 로는 ** l2reg = 0.001 * tf.reduce_sum(tf.square(W)) **\n",
+    "\n",
+    "### lec 07 - 2 : Training/Testing 데이타 셋\n",
+    "\n",
+    "- 전체 데이터 셋을 train/test로 나누는 부분에 대한 설명\n",
+    "- 이론과 실제 구현까지 가능하므로 패스\n",
+    "\n",
+    "#### online learinng\n",
+    "- train set 이 100만개가 있을 때, 10만개씩 잘라서 학습을 시키는 것. \n",
+    "- 첫 번째 데이터 셋의 학습 결과가 모델에 남아있어야 함. "
    ]
   }
  ],
