solve the problem

--- a/Hacker_rank/Cracking_the_Coding_Interview/01_Arrays_Left_Rotation.ipynb
+++ b/Hacker_rank/Cracking_the_Coding_Interview/01_Arrays_Left_Rotation.ipynb
@@ -78,11 +78,16 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def array_left_rotation(a, n, k):\n",
-    "    # TODO"
+    "    ls = list(a)\n",
+    "    result = ls[k:] + ls[:k]\n",
+    "    return result\n",
+    "    "
    ]
   },
   {
@@ -124,7 +129,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
