--- a/Hacker_rank/Cracking_the_Coding_Interview/02_Strings_Making_Anagrams.ipynb
+++ b/Hacker_rank/Cracking_the_Coding_Interview/02_Strings_Making_Anagrams.ipynb
@@ -75,148 +75,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 78,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "def number_needed(a, b):\n",
-    "    result = len(set(a)|set(b)) + len(set(a)&set(b)) - (len(a) - len(set(a)))\n",
-    "    return result"
+    "from collections import Counter\n",
+    "def number_needed(a, b) :\n",
+    "    freq_a, freq_b = Counter(a), Counter(b)\n",
+    "    freq_a.subtract(freq_b)\n",
+    "    return sum([abs(x) for x in freq_a.values()])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "26"
-      ]
-     },
-     "execution_count": 122,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(set(a + b))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 118,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "26"
-      ]
-     },
-     "execution_count": 118,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(set(a)|set(b))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 114,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "9"
-      ]
-     },
-     "execution_count": 114,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(set(a)&set(b))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 115,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5"
-      ]
-     },
-     "execution_count": 115,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "(len(a) - len(set(a)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 116,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "10"
-      ]
-     },
-     "execution_count": 116,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "(len(b) - len(set(b)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "25\n"
-     ]
-    }
-   ],
-   "source": [
-    "b = \"fcrxzwscanmligyxyvym\"\n",
-    "a = \"jxwtrhvujlmrpdoqbisbwhmgpmeoke\"\n",
-    "print(number_needed(a, b))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 124,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "fcrxzwscanmligyxyvym\n",
-      "jxwtrhvujlmrpdoqbisbwhmgpmeoke\n",
-      "40\n"
+      "abc\n",
+      "cde\n",
+      "4\n"
      ]
     }
    ],
