--- a/NLP/CS224n/Lecture_3.ipynb
+++ b/NLP/CS224n/Lecture_3.ipynb
@@ -8,7 +8,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -38,7 +37,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -57,7 +55,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -98,7 +95,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -122,14 +118,16 @@
     "#### SVD(Singular Value Decomposition)이란?\n",
     "- 고유값 분해(eigendecompostion)처럼 행렬을 대각화 하는 방법\n",
     "- 행렬이 정방행렬이 아니어도 모든 m * n 에 대해 적용이 가능함. \n",
-    "(고유값, 고유벡터에서 다룬 내용의 경우, 정방행렬에 대해서만 가능)\n",
+    "(고유값, 고유벡터에서 다룬 내용의 경우, 정방행렬에 대해서만 가능)  \n",
     "SVD  세부설명 링크 : http://darkpgmr.tistory.com/106"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#simple SVD word vectors in python\n",
@@ -201,13 +199,6 @@
     "#### problems with SVD\n",
     "- 큰 형태의 행렬을 가질 경우 문제가 발생할 수 있음. \n",
     "(down stream deep learning method는 추측컨데, SVD를 기반으로 하는 다른 딥러닝 방법들을 말하는 듯)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "https://www.youtube.com/watch?v=ASn7ExxLZws&t=1119s, 36:24"
    ]
   },
   {
