--- a/database/mongodb_python_practice.ipynb
+++ b/database/mongodb_python_practice.ipynb
@@ -133,53 +133,8 @@
    "source": [
     "local에선 잘되던 파이몽고가 ec2의 mongodb로는 연결이 안됨  \n",
     "1. ec2 방화벽 해제 완료 - 포트번호도 잘 적어줌\n",
-    "2. mongodb의 설정파일에어 ip및 포트번호 설정도 완료.\n",
-    "3. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# choose collection 'info'\n",
-    "collection = db.info"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "document = collection.find_one({\"username\" : \"test user\"})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "document"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "db = "
+    "2. mongodb의 설정파일에서 ip및 포트번호 설정도 완료.\n",
+    "3. 디버깅 과정 중에 있음"
    ]
   }
  ],
