180507_merge_the_tools

--- a/Hacker_rank/Medium/180507_merge_the_tools.ipynb
+++ b/Hacker_rank/Medium/180507_merge_the_tools.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 31,
    "metadata": {
     "collapsed": true
    },
@@ -31,7 +31,7 @@
    "source": [
     "def merge_the_tools(string, k):\n",
     "    n = int(len(string)/int(k))\n",
-    "    for i in range(1, n+1) :  \n",
+    "    for i in range(1, int(k)+1) :  \n",
     "        string_by_k = string[ (i - 1) * n : n * i]\n",
     "        result = []\n",
     "        for i in range(len(string_by_k)) :\n",
@@ -46,13 +46,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 34,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "KYQTWXDLINFBHRGZVCUSAMOEPJ\n",
+      "YUGTZIWNVSALBXOCDMPFEKJRQH\n"
+     ]
+    }
+   ],
+   "source": [
+    "merge_the_tools(sentence, n)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### other answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "AABCAAADA\n",
+      "3\n",
       "AB\n",
       "CA\n",
       "AD\n"
@@ -60,7 +96,10 @@
     }
    ],
    "source": [
-    "merge_the_tools(\"AABCAAADA\", 3)"
+    "S, N = input(), int(input()) \n",
+    "for part in zip(*[iter(S)] * N):\n",
+    "    d = dict()\n",
+    "    print(''.join([ d.setdefault(c, c) for c in part if c not in d ]))"
    ]
   }
  ],
